force-app/main/default/objects/docutizexa__Organization__c/docutizexa__Organization__c.object-meta.xml
<CustomObject>
    <label>Organization</label>
    <nameField>
        <label>OrganizationName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>