force-app/main/default/objects/docutizexa__Organization__c/fields/docutizexa__EndDate__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__EndDate__c</fullName>
    <label>EndDate</label>
    <type>Date</type>
</CustomField>