force-app/main/default/objects/docutizexa__Organization__c/fields/docutizexa__OrganizationCode__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__OrganizationCode__c</fullName>
    <label>OrganizationCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>