force-app/main/default/objects/docutizexa__Organization__c/listViews/docutizexa__All.listView-meta.xml
<ListView>
    <fullName>docutizexa__All</fullName>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>